--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -24,8 +24,14 @@ jobs:
         gem install bundler
         bundle install
 
+    - name: Debug - Show Jekyll version and configuration
+      run: |
+        bundle exec jekyll --version
+        bundle exec jekyll doctor
+        cat _config.yml
+
     - name: Build site
-      run: JEKYLL_ENV=production bundle exec jekyll build
+      run: JEKYLL_ENV=production bundle exec jekyll build --trace
 
     - name: Debug - List directory contents
       run: |
@@ -35,6 +41,8 @@ jobs:
         ls -la
         echo "Contents of _site directory (if it exists):"
         ls -la _site || echo "_site directory not found"
+        echo "Contents of docs directory (if it exists):"
+        ls -la docs || echo "docs directory not found"
 
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/master'
